# solanaday

./: Anchor.toml
frontend/: add.html  app.js  collection.html  index.html  myproject.json  style.css
frontend/assets/: style.css
frontend/assets/sample/: tokens.json
frontend/js/: add.js  data.js  list.js
programs/myproject/: Cargo.toml
programs/myproject/src/: lib.rs
tests/: myproject.ts
